# Software-Defined-Vehicle

./: .gitmodules  README.md
ECU-CORE/Docker/: Dockerfile.ros-master  Dockerfile.sensor-node
ECU-CORE/kubernetes/deployments/: ros-master-deployment.yaml  sensor-node-deployment.yaml
ECU-CORE/kubernetes/services/: ros-services.yaml
ECU-CORE/ros_ws/src/sdv_sensors/: CMakeLists.txt  package.xml
ECU-CORE/ros_ws/src/sdv_sensors/launch/: sensor_node.launch
ECU-CORE/ros_ws/src/sdv_sensors/src/: camera_node.py
ECU-Control/: control.py  keyboard_controller.py
